[EDP-DDM-8451] improved logging in user-task-management
Change-Id: I6bbcd072449c57a518ec76753777a601ba2632d7